--- a/worker-test.html
+++ b/worker-test.html
@@ -3,6 +3,6 @@
     <title>Place My Order</title>
   </head>
   <body>
-     <script src="/node_modules/steal/steal.js" main="pmo/index.stache!done-worker-autorender"></script>
+     <script src="/node_modules/steal/steal.js" env="production" main="pmo/index.stache!done-worker-autorender"></script>
   </body>
 </html>
