--- a/development.html
+++ b/development.html
@@ -6,8 +6,8 @@
 <body>
   <!-- Use hashchange routing for development -->
   <script>
-    steal = {map: {"can-route-pushstate": "@empty"}}
+    steal = {map: {"can-route-pushstate": "can-route-hash"}}
   </script>
-  <script src="node_modules/steal/steal.js"></script>
+  <script src="node_modules/steal/steal.js" main></script>
 </body>
 </html>
