--- a/test.html
+++ b/test.html
@@ -1,4 +1,5 @@
+<!doctype html>
 <title>place-my-order tests</title>
 <script>FuncUnit = { frameMode: true };</script>
-<script src="../node_modules/steal/steal.js" main="place-my-order/test/"></script>
+<script src="node_modules/steal/steal.js" main="place-my-order/test"></script>
 <div id="qunit-fixture"></div>
