Update demos to use the new way

--- a/src/pages/restaurant/list/list.html
+++ b/src/pages/restaurant/list/list.html
@@ -1,9 +1,12 @@
-<pmo-restaurant-list></pmo-restaurant-list>
-
 <script src="../../../../node_modules/steal/steal.js"></script>
 <script type="steal-module">
+  import PmoRestaurantList from "~/pages/restaurant/list/";
   import "place-my-order-assets";
   import "~/models/fixtures/";
 
-  steal.import("~/pages/restaurant/list/");
+  let pmoRestaurantList = new PmoRestaurantList({
+    viewModel: {}
+  });
+
+  document.body.appendChild(pmoRestaurantList.element);
 </script>
